--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,11 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="35sp"
-            android:text="Result: "
-            android:textColor="@color/black"
             android:layout_gravity="center"
             android:layout_marginBottom="100dp"
-            />
+            android:text="Result"
+            android:textColor="@color/black"
+            android:textSize="35sp" />
 
         <Button
             android:id="@+id/button"
