--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="110dp"
             android:text="Result"
             android:textColor="@color/black"
             android:textSize="35sp" />
@@ -44,11 +44,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
             android:backgroundTint="@color/black"
-            android:textSize="30sp"
-            android:textColor="@color/white"
             android:text="@string/take_photo"
-            />
+            android:textColor="@color/white"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView2"
@@ -62,7 +62,7 @@
             android:id="@+id/imageView2"
             android:layout_width="450px"
             android:layout_height="600px"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
